- Remove `SignificantPlaceService` and migrate functionality to `VisitService` and `VisitMergingService`. - Decouple `Visit` from `SignificantPlace` by removing `place_id` and adding `latitude` and `longitude` fields. - Refactor `LocationProcessingPipeline` to work with updated `VisitService` for stay point processing. - Update database schema via migration to remove references to `place_id` in `visits` table. - Cleanup and improve merging logic in `VisitMergingService` for processed visits.